<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/accelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/accelerometer" />

    <TextView
        android:id="@+id/accelerometerX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accelerometer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/accel_x" />

    <TextView
        android:id="@+id/accelerometerY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accelerometerX"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/accel_y" />

    <TextView
        android:id="@+id/accelerometerZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accelerometerY"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/accel_z" />

    <TextView
        android:id="@+id/magnetic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accelerometerZ"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/magnetic" />

    <TextView
        android:id="@+id/magneticX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/magnetic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/magnetic_x" />

    <TextView
        android:id="@+id/magneticY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/magneticX"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/magnetic_y" />

    <TextView
        android:id="@+id/magneticZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/magneticY"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/magnetic_z" />

    <TextView
        android:id="@+id/proximity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/magneticZ"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/proximity" />

    <TextView
        android:id="@+id/proximityVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/proximity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/proximity_val" />

    <TextView
        android:id="@+id/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/proximityVal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/light" />

    <TextView
        android:id="@+id/lightVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/light"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/light_val" />

</RelativeLayout>